--- a/frontend/app/views/joiner/payment/paymentForm.scala.html
+++ b/frontend/app/views/joiner/payment/paymentForm.scala.html
@@ -37,7 +37,7 @@
                 @fragments.form.errorMessageDisplay()
                 @fragments.form.nameDetail(userFields.firstName, userFields.secondName)
                 @fragments.form.addressDetail("Delivery address", "Where shall we send your welcome pack", "deliveryAddress", true,
-                userFields.address1, userFields.address2, userFields.address3, userFields.postcode, userFields.address4)
+                userFields.address1, userFields.address2, userFields.address3, userFields.postcode, userFields.address4, userFields.country)
 
                 @*
                 //TODO write scala for the functionality to show password
@@ -47,7 +47,8 @@
                 @fragments.form.paymentOptions(tier)
                 @fragments.form.billingAddressCTA()
                 @fragments.form.addressDetail("Billing address", "The billing address for your card", "billingAddress", true,
-                userFields.billingAddress1, userFields.billingAddress2, userFields.billingAddress3, userFields.billingPostcode, userFields.billingAddress4)
+                userFields.billingAddress1, userFields.billingAddress2, userFields.billingAddress3, userFields.billingPostcode,
+                userFields.billingAddress4, userFields.billingCountry)
                 @fragments.form.cardDetail()
                 @fragments.form.submit("Pay now")
             </form>
