--- a/frontend/app/views/joiner/detail/addressForm.scala.html
+++ b/frontend/app/views/joiner/detail/addressForm.scala.html
@@ -14,7 +14,7 @@
         @fragments.form.errorMessageDisplay()
         @fragments.form.nameDetail(userFields.firstName, userFields.secondName)
         @fragments.form.addressDetail("Delivery address", "Where shall we send your welcome pack", "deliveryAddress", false,
-        userFields.address1, userFields.address2, userFields.address3, userFields.postcode, userFields.address4)
+        userFields.address1, userFields.address2, userFields.address3, userFields.postcode, userFields.address4, userFields.country)
         @fragments.form.submit("Join now")
     </form>
 
