--- a/frontend/app/views/tier/upgrade/upgradeForm.scala.html
+++ b/frontend/app/views/tier/upgrade/upgradeForm.scala.html
@@ -9,11 +9,12 @@
         @CSRF.formField
         @fragments.form.errorMessageDisplay()
         @fragments.form.addressDetail("Delivery address", "Where we'll send your welcome pack", "deliveryAddress", true,
-        userFields.address1, userFields.address2, userFields.address3, userFields.postcode, userFields.address4)
+        userFields.address1, userFields.address2, userFields.address3, userFields.postcode, userFields.address4, userFields.country)
         @fragments.form.cardDetail()
         @fragments.form.billingAddressCTA()
         @fragments.form.addressDetail("Billing address", "The billing address for your card", "billingAddress", true,
-        userFields.billingAddress1, userFields.billingAddress2, userFields.billingAddress3, userFields.billingPostcode, userFields.billingAddress4)
+        userFields.billingAddress1, userFields.billingAddress2, userFields.billingAddress3, userFields.billingPostcode,
+        userFields.billingAddress4, userFields.billingCountry)
         @fragments.form.paymentOptions(targetTier)
         @fragments.form.submit("Join now")
 
