Use tier logic over benefits.level

--- a/frontend/app/views/fragments/tier/benefits.scala.html
+++ b/frontend/app/views/fragments/tier/benefits.scala.html
@@ -10,7 +10,6 @@
         }
         <div class="package__inner">
             <h2 class="package__title">@tier</h2>
-            <div>
                 <span class="package__price">
                     @Config.benefits(tier).priceText
                     @if(tier > Tier.Friend){
@@ -18,20 +17,16 @@
                     }
                 </span>
                 @if(!isCurrentPackage) {
-                    @defining(
-                        (Config.benefits(currentTier).level == 1 && Config.benefits(tier).level != 2) ||
-                        (Config.benefits(currentTier).level == 2 && Config.benefits(tier).level != 1)
-                    ) { canChangeTier =>
-                        <@if(canChangeTier){a href="/tier/change/@tier.toString.toLowerCase"} else {span} class="action-cta action-cta--full-width-mobile action-cta--confirm@if(!canChangeTier) { action-cta--cancel}">
-                            @if(canChangeTier) {
-                                @Config.benefits(tier).cta
-                            } else {
-                                Coming soon
-                            }
-                        </@if(canChangeTier){a} else {span}>
+                    @if(currentTier == Tier.Friend || tier == Tier.Friend) {
+                        <a href="/tier/change/@tier.toString.toLowerCase" class="action-cta action-cta--full-width-mobile action-cta--confirm">
+                            @Config.benefits(tier).cta
+                        </a>
+                    } else {
+                        <span class="action-cta action-cta--full-width-mobile action-cta--cancel">
+                            Coming soon
+                        </span>
                     }
                 }
-            </div>
             <p>@Config.benefits(tier).leadin</p>
             <ul class="package__list-element">
                 @for(item <- Config.benefits(tier).list) {
