markup and styling join membership block

--- a/frontend/assets/stylesheets/_vars.scss
+++ b/frontend/assets/stylesheets/_vars.scss
@@ -208,6 +208,7 @@ $action-icon-rightspace: 7px;
 $mem-brandOrange: #ce6f14;
 $mem-brandBlue: #82c2d6;
 $mem-brandGrey: #dcddda;
+$mem-brandLightblue: #02c7e1;
 $mem-trans-white: rgba(255, 255, 255, .8);
 $mem-black: #333333;
 $mem-blue: rgba(2, 199, 225, 1);
