--- a/frontend/assets/stylesheets/layout/_layout.scss
+++ b/frontend/assets/stylesheets/layout/_layout.scss
@@ -12,9 +12,16 @@ html {
 
 body {
     min-height: 100%;
+
     @include rem((
         margin-bottom: 198px
     ));
+
+    @include mq(desktop) {
+        @include rem((
+            margin-bottom: 100px
+        ));
+    }
 }
 
 .header {
@@ -109,8 +116,14 @@ body {
     &.brochure-container--white-background {
         background-color: $white;
         @include rem((
-            padding: $gs-gutter*3 0 $gs-gutter*2
+            padding: $gs-gutter 0
         ));
+
+        @include mq(desktop) {
+            @include rem((
+                padding: $gs-gutter*3 0 $gs-gutter*2
+            ));
+        }
     }
 
     &.brochure-container--no-top-margin {
@@ -139,22 +152,28 @@ body {
 
 
 .brochure-container {
-    @include rem((
-        width: 100%,
-        margin: 0 auto,
-        padding: 0 $gs-gutter
-    ));
-    background-color: rgba(255, 255, 255, .95);
     @include fs-headline(2);
+    background-color: rgba(255, 255, 255, .95);
+    @include rem((
+        padding: 0 $gs-gutter/2,
+        margin: 0 $gs-gutter/2,
+    ));
 
     @include mq(desktop) {
         @include fs-headline(5);
-        width: gs-span(12);
+        @include rem((
+            width: gs-span(12),
+            margin: 0 auto,
+            padding: 0 $gs-gutter
+        ));
     }
 }
 
 // promo block one
 .brochure-container--promo-one {
+    @include rem((
+        margin-bottom: $gs-gutter * 2
+    ));
     @include mq(desktop) {
         @include rem((
             padding: 0 gs-span(3) 0 $gs-column-width+$gs-gutter,
@@ -165,13 +184,18 @@ body {
         @include mq(desktop) {
             width: gs-span(8);
         }
+    } 
 
-        .section-headline--border-bottom {
+    .section-headline--border-bottom {
+        @include rem((
+            margin-bottom: $gs-gutter/2
+        ));
+        @include mq(desktop) {
             @include rem((
-                margin-bottom: $gs-gutter
+                width: gs-span(8)
             ));
         }
-    } 
+    }
 }
 
 // promo block two
@@ -202,8 +226,7 @@ body {
     color: $black;
     @include mq(desktop) {
         @include rem((
-            padding: 0 gs-span(3) 0 $gs-column-width+$gs-gutter,
-            margin-bottom: $gs-gutter * 2
+            padding: 0 gs-span(3)+$gs-gutter 0 gs-span(1)+$gs-gutter
         ));
     }
 
@@ -215,6 +238,12 @@ body {
         .section-headline--black {
             border-top: $gs-gutter solid $black;
             color: $black;
+            @include mq(desktop) {
+                @include rem((
+                    width: gs-span(8),
+                    margin-bottom: $gs-gutter*3
+                ));
+            }
         }
 
         .brochure-container__image:first-child {
@@ -230,14 +259,6 @@ body {
 // promo block four
 .brochure-container--promo-four {
     background-color: $white;
-
-    .section-headline--with-margins {
-        @include mq(desktop) {
-            @include rem((
-                margin: 0 $gs-column-width*3 $gs-gutter*3 $gs-column-width+$gs-gutter
-            ));
-        }
-    }
 
     .brochure-container__teaser {
         @include mq(desktop) {
@@ -272,6 +293,17 @@ body {
         ));
     } 
 
+    .section-headline--border-bottom {
+        @include rem((
+            margin-bottom: $gs-gutter/2
+        ));
+        @include mq(desktop) {
+            @include rem((
+                width: gs-span(8)
+            ));
+        }
+    }
+
     .brochure-container__teaser {
         @include mq(desktop) {
             @include rem((
@@ -300,6 +332,9 @@ body {
 
     .brochure-container__join-box {
         border: 1px solid $c-neutral5;
+        @include rem((
+            margin-bottom: $gs-gutter
+        ));
 
         @include mq(desktop) {
             @include rem((
@@ -316,16 +351,99 @@ body {
     .brochure-container__join-box--header {
         @include fs-headline(3);
         @include rem((
-            padding: $gs-gutter
+            padding: $gs-gutter $gs-gutter $gs-gutter 65px
         ));
+        position: relative;
+
+        &:before {
+            @extend %icon-sprite;
+            @extend %icon-sprite-g-white-36;
+            content: '';
+            display: block;
+            position: absolute;
+            @include rem((
+                left: $gs-gutter,
+                top: 15px
+            ));
+        }
+
+        &.brochure-container__join-box--header--friends {
+            background-color: $c-neutral1;
+            color: $white;
+        }
+
+        &.brochure-container__join-box--header--partner {
+            background-color: $mem-brandLightblue;
+            color: $black;
+        }
+
+        &.brochure-container__join-box--header--patron {
+            background-color: $mem-brandBlue;
+            color: $white;
+        }
     }
 
-    .brochure-container__teaser {
+    .brochure-container__price {
         @include fs-headline(2);
 
         @include mq(desktop) {
             @include fs-headline(3);
         }
+        @include rem((
+            height: 45px,
+            margin-top: $gs-gutter
+        ));
+
+        .brochure-container__price--bold {
+            @include rem((
+                width: gs-span(2),
+                padding-left: $gs-gutter
+            ));
+
+            &:last-child {
+                text-align: right;
+            }
+        }
+
+        .save-price {
+            @include fs-bodyCopy(1);
+            color: $c-neutral3;
+            display: block;
+        }
+    }
+
+    .brochure-container__teaser--description {
+        @include rem((
+            margin: $gs-gutter,
+            padding-top: $gs-gutter,
+            min-height: 120px
+        ));
+        @include fs-bodyCopy(2);
+        border-top: 1px solid $c-neutral5;
+
+        @include mq(desktop) {
+            @include fs-bodyCopy(3);
+        }
+    }
+
+    .action--join {
+        @include rem((
+            margin-left: $gs-gutter/2
+        ));
+        @include mq(desktop) {
+            @include rem((
+                margin-left: $gs-gutter
+            ));
+        }
+    }
+}
+
+.section-headline--with-margins {
+    @include mq(desktop) {
+        @include rem((
+            width: gs-span(8),
+            margin: 0 gs-span(3)+$gs-gutter*2 $gs-gutter*3 gs-span(1)
+        ));
     }
 }
 
