Send the actual category

--- a/frontend/app/views/fragments/form/feedback.scala.html
+++ b/frontend/app/views/fragments/form/feedback.scala.html
@@ -13,10 +13,10 @@
                     <select name="category" id="category" data-validation="required" data-error-message="Please select a
                     feedback category">
                         <option value="">Select feedback category</option>
-                        <option value="1">Report a problem</option>
-                        <option value="2">Suggest an improvement</option>
-                        <option value="3">Give general feedback</option>
-                        <option value="4">Accessibility issue</option>
+                        <option>Report a problem</option>
+                        <option>Suggest an improvement</option>
+                        <option>Give general feedback</option>
+                        <option>Accessibility issue</option>
                     </select>
                 </div>
             </label>
