--- a/frontend/app/views/fragments/tier/summary.scala.html
+++ b/frontend/app/views/fragments/tier/summary.scala.html
@@ -22,7 +22,7 @@
     </tr>
     <tr class="summary-table__row" role="row">
         <td class="summary-table__cell">
-            Monthly Payment
+            @if(currentSubscription.annual){ Annual } else { Monthly } Payment
         </td>
         <td class="summary-table__cell">
             @currentSubscription.planAmount.pretty
