Move main content into wrapper div to hide it from old browsers

--- a/frontend/app/views/main.scala.html
+++ b/frontend/app/views/main.scala.html
@@ -65,18 +65,21 @@
 
         @fragments.unsupportedBrowser()
 
-        @fragments.header()
+        <div class="container-global">
 
-        <div class="page-side-margins">
-        @if(isBrochure != true) {
-            <div class="page-container">
-        }
+            @fragments.header()
 
-                @content
+            <div class="page-side-margins">
+            @if(isBrochure != true) {
+                <div class="page-container">
+            }
 
-        @if(isBrochure != true) {
+                    @content
+
+            @if(isBrochure != true) {
+                </div>
+            }
             </div>
-        }
         </div>
 
         @fragments.footer()
