Logo should be its real size, not 100% width

--- a/frontend/assets/stylesheets/pages/_browser-warning.scss
+++ b/frontend/assets/stylesheets/pages/_browser-warning.scss
@@ -83,6 +83,7 @@ html.js-ancient-browser {
 }
 
 .browser-upgrade-msg__logo {
+    width: auto;
     background-color: transparent;
     @include rem((
         margin-bottom: 15px
