--- a/frontend/assets/stylesheets/_vars.scss
+++ b/frontend/assets/stylesheets/_vars.scss
@@ -208,6 +208,7 @@ $action-icon-rightspace: 7px;
 $mem-brandOrange: #ce6f14;
 $mem-brandBlue: #82c2d6;
 $mem-brandGrey: #dcddda;
+$mem-brandDarkBlue: $c-newsDefault;
 $mem-brandLightblue: #02c7e1;
 $mem-trans-white: rgba(255, 255, 255, .95);
 $mem-trans-red: rgba(180, 24, 0, .95);
