Send gnm and third party preferences to salesforces on membership creation

--- a/frontend/app/views/joiner/detail/addressForm.scala.html
+++ b/frontend/app/views/joiner/detail/addressForm.scala.html
@@ -1,4 +1,4 @@
-@(userFields: model.PrivateFields)(implicit token: play.filters.csrf.CSRF.Token)
+@(userFields: model.PrivateFields, marketingChoices: model.StatusFields)(implicit token: play.filters.csrf.CSRF.Token)
 
 @import configuration.Config
 @import helper._
@@ -15,6 +15,7 @@
         @fragments.form.nameDetail(userFields.firstName, userFields.secondName)
         @fragments.form.addressDetail("Delivery address", "Where shall we send your welcome pack", "deliveryAddress", false,
         userFields.address1, userFields.address2, userFields.address3, userFields.postcode, userFields.address4, userFields.country)
+        @fragments.form.marketingChoices(marketingChoices.receiveGnmMarketing, marketingChoices.receive3rdPartyMarketing)
         @fragments.form.submit("Join now")
     </form>
 
