Add ID to join button on home page for QA

--- a/frontend/app/views/index.scala.html
+++ b/frontend/app/views/index.scala.html
@@ -39,7 +39,7 @@
                 <div class="brochure-container__image"><img src="@Asset.at("images/homepage/teaser-image1.jpg")" alt="" /></div>
                 <div class="brochure-container__teaser">
                     <p class="brochure-container__copy">Guardian Membership brings you closer to the <strong>stories</strong> of the day, connects you to the <strong>conversations</strong> that matter and introduces you to <strong>fellow members</strong> who share your interests.</p>
-                    <p class="brochure-container__copy"><a class="action action--join" href="/join">Join today</a></p>
+                    <p class="brochure-container__copy"><a class="action action--join" id="qa-join" href="/join">Join today</a></p>
                 </div>
             </div>
         </div>
