Priority Events presentation code and styling
This commit divides some of @chrisfinch's work and doesn't use the data
from the Event-Ordering tool, instead just taking the first 4 events
returned by Eventbrite as the 'priority' events (the 1st of which is the
'hero' event'). I'll provide another commit to sort that out, but this
commit should allow styling etc to be merged earlier.

https://github.com/guardian/membership/pull/376

--- a/frontend/app/views/main.scala.html
+++ b/frontend/app/views/main.scala.html
@@ -1,11 +1,11 @@
-@(title: String, isBrochure: Boolean = false)(content: Html)
+@(title: String, isBrochure: Boolean = false, containerPadding: Boolean = true, htmlClass: String = "")(content: Html)
 
 @import configuration.Config
 @import views.support.Asset
 
 <!DOCTYPE html>
 
-<html class="js-off">
+<html class="js-off @htmlClass">
     <head>
         <!--
 
@@ -65,16 +65,15 @@
 
         @fragments.unsupportedBrowser()
 
+        @fragments.header()
+
         <div class="container-global">
-
-            @fragments.header()
-
             <div class="page-side-margins">
             @if(isBrochure != true) {
-                <div class="page-container">
+                <div class="page-container @if(containerPadding){page-container--with-padding}">
             }
 
-                    @content
+                @content
 
             @if(isBrochure != true) {
                 </div>
