--- a/frontend/assets/stylesheets/layout/_layout.scss
+++ b/frontend/assets/stylesheets/layout/_layout.scss
@@ -8,6 +8,11 @@ html {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+
+    &.events-bg {
+        background: url(/assets/images/mem-bg-events.jpg) no-repeat center center fixed;
+    }
+
 }
 
 body {
@@ -34,15 +39,23 @@ body {
 
 .page-container {
     @include rem((
-        padding: 0 $gs-gutter/4
+        padding: 0 $gs-gutter/2
     ));
-    background-color: #ffffff;
+    @include mq(tablet) {
+        padding: 0 $gs-gutter;
+        max-width: gs-span(12)+($gs-gutter*2);
+    }
     @include clearfix;
     position: relative;
     margin: 0 auto;
-    @include rem((
-        max-width: 1100px
-    ));
+
+    @include mq(desktop) {
+        padding: 0;
+    }
+
+    @include mq(mem-full) {
+        max-width: gs-span(14)+($gs-gutter*2);
+    }
 
     h2 {
         @include fs-header(2);
@@ -52,10 +65,13 @@ body {
         }
     }
 
-    @include mq(tablet) {
-        @include rem((
-            padding: 0 $gs-gutter*4 $gs-gutter*8
-        ));
+    &.page-container--with-padding {
+        background-color: #ffffff;
+        @include mq(tablet) {
+            @include rem((
+                padding: 0 $gs-gutter*4 $gs-gutter*8
+            ));
+        }
     }
 }
 
@@ -182,14 +198,14 @@ body {
             padding: 0 gs-span(2) 0 $gs-column-width+$gs-gutter,
             margin-bottom: $gs-gutter*2
         ));
-    }  
+    }
 
     @include mq(desktop) {
         @include rem((
             padding: 0 gs-span(3) 0 $gs-column-width+$gs-gutter,
             margin-bottom: $gs-gutter*2
         ));
-    }  
+    }
     .brochure-container__inner {
         @include mq(tablet) {
             @include rem((
@@ -202,7 +218,7 @@ body {
                 width: gs-span(8)
             ));
         }
-    } 
+    }
 
     .section-headline--border-bottom {
         @include rem((
@@ -241,7 +257,7 @@ body {
             @include rem((
                 width: gs-span(4),
                 margin-right: $gs-gutter
-            )); 
+            ));
         }
     }
 }
@@ -251,7 +267,7 @@ body {
 
 .brochure-container--promo-three,
 .brochure-container--promo-five {
-    background-color: $mem-trans-red;
+    background-color: $mem-live-red-trans;
     color: $black;
 
     @include mq(desktop) {
@@ -295,7 +311,7 @@ body {
                 ));
             }
         }
-    } 
+    }
 }
 
 // promo block four
@@ -347,7 +363,7 @@ body {
             padding: 0 0 0 $gs-column-width+$gs-gutter,
             margin-bottom: $gs-gutter * 2
         ));
-    } 
+    }
 
     .section-headline--border-bottom {
         @include rem((
@@ -578,7 +594,7 @@ blockquote {
     }
 }
 
-.blockquote--black-line { 
+.blockquote--black-line {
     border-top: 1px solid $black;
     @include rem((
         padding-top: 10px
